--- a/styles.css
+++ b/styles.css
@@ -29,5 +29,25 @@ body {
 /**********/
 
 .pricing-comp-grid {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+}
+
+.billing--span,
+.billing--toggle {
+  display: inline-block;
+}
+
+/**************/
+/* Components */
+/**************/
+
+.slider {
+  background-color: hsl(174, 77%, 80%);
+  height: 10px;
+  width: 100%;
+  border-radius: 50px;
+  margin: 15px auto;
 }
