Centered h1 title and intro text.

--- a/styles.css
+++ b/styles.css
@@ -27,12 +27,16 @@ body {
 /**********/
 /* Layout */
 /**********/
+h1,
+.intro {
+  text-align: center;
+}
 
-.pricing-comp-grid {
+.pricing-comp-flex-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
+  padding: 2em;
 }
 
 .billing--span,
