--- a/styles.css
+++ b/styles.css
@@ -108,20 +108,38 @@ h1,
 
 /* This is the gray toggle bar */
 .billing--toggle {
+  position: relative;
   width: 40px;
   height: 22px;
   border-radius: 50px;
   background-color: hsl(223, 50%, 87%);
-  position: relative;
 }
 
-/*This is the little white circle within the toggle bar */
+/* Remove actual checkbox from checkbox input */
+
+.billing--toggle input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* Replace checkbox with white circle "toggler" */
 .billing--toggle__btn {
+  position: absolute;
+  background-color: white;
+}
+
+.billing--toggle__btn:before {
+  position: absolute;
+  content: "";
   width: 15px;
   height: 15px;
+  top: 3px;
+  left: -2px;
   border-radius: 50%;
   background-color: white;
-  position: absolute;
-  top: 3px;
-  left: 5px;
+}
+
+input:checked + .billing--toggle__btn:before {
+  transform: translateX(15px);
 }
