--- a/styles.css
+++ b/styles.css
@@ -56,13 +56,35 @@ h1,
 .pricing-comp-container-bottom {
   padding: 2em;
   width: 80%;
-  max-width: 450px;
+  max-width: 850px;
 }
 
 .pricing-comp-container-top {
   display: grid;
-  grid-auto-flow: row;
+  grid-template: 50px 75px 75px 50px / 1fr;
+  grid-template-areas:
+    "pageviews"
+    "slider"
+    "pricing"
+    "toggle";
   margin: 5em auto 0;
+}
+
+.pageviews {
+  grid-area: pageviews;
+}
+
+.pricing {
+  grid-area: pricing;
+}
+
+.slider-container {
+  grid-area: slider;
+  align-self: center;
+}
+
+.billing {
+  grid-area: toggle;
 }
 
 .pricing-comp-container-bottom {
@@ -74,8 +96,7 @@ h1,
 
 .pricing,
 .pageviews,
-.slider,
-.billing {
+.slider-container {
   margin: 1em auto;
 }
 
@@ -84,10 +105,7 @@ h1,
 .billing__discount {
   display: inline-block;
   vertical-align: middle;
-}
-
-.billing-toggle {
-  margin: 0 1em;
+  margin-left: 0.6em;
 }
 
 .billing__discount {
@@ -121,12 +139,27 @@ h1,
   border-bottom-right-radius: 7px;
 }
 
+/* The slider bar */
 .slider {
+  appearance: none;
   background-color: hsl(174, 77%, 80%);
-  height: 10px;
   width: 100%;
+  height: 10px;
   border-radius: 50px;
   margin: 15px auto;
+}
+
+/* The slider bar */
+.slider::-webkit-slider-thumb {
+  appearance: none;
+  width: 35px;
+  height: 35px;
+  background-color: hsl(174, 86%, 45%);
+  background-image: url(images/icon-slider.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 /* This is the gray toggle bar */
@@ -171,6 +204,52 @@ input:checked + .billing-toggle__btn:before {
 .button-trial {
   color: hsl(225, 20%, 60%);
   background-color: hsl(227, 35%, 25%);
-  padding: 0.75em 4em;
+  padding: 0.75em 3em;
   border-radius: 50px;
+  margin-top: 2em;
+}
+
+@media screen and (min-width: 375px) {
+  .pricing-comp-container-top {
+    grid-template: 75px 75px 40px / repeat(3, 1fr);
+    grid-template-areas:
+      "pageviews . pricing"
+      "slider slider slider"
+      "toggle toggle toggle";
+  }
+
+  .pricing-comp-container-bottom {
+    flex-direction: row;
+  }
+
+  .pricing,
+  .pageviews,
+  .slider-container {
+    margin: 1em 0;
+  }
+
+  .pageviews {
+    justify-self: left;
+    align-self: center;
+  }
+  .pricing {
+    justify-self: end;
+    align-self: center;
+  }
+
+  .billing {
+    justify-self: center;
+  }
+
+  .benefits {
+    text-align: left;
+  }
+
+  .button__a {
+    margin-left: auto;
+  }
+
+  .button-trial {
+    margin-top: 0;
+  }
 }
