--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,14 @@ h1,
   border-radius: 50px;
 }
 
+.billing__discount--desktop {
+  display: none;
+}
+
+.billing__discount--mobile {
+  display: inline-block;
+}
+
 .benefits {
   text-align: center;
 }
@@ -274,5 +282,13 @@ input:checked + .billing-toggle__btn:before {
 
   .button-trial {
     margin-top: 0;
+  }
+
+  .billing__discount--desktop {
+    display: inline-block;
+  }
+
+  .billing__discount--mobile {
+    display: none;
   }
 }
