--- a/styles.css
+++ b/styles.css
@@ -320,10 +320,10 @@ input:checked + .billing-toggle__btn:before {
   transition: padding 250ms;
 }
 
-.button-trial:hover {
+.button-trial:hover,
+.button-trial:active {
   padding: 1em 3.25em;
   box-shadow: 0px 2px 3px 3px rgb(50, 50, 50, 0.2);
-  /* background-color: hsl(227, 35%, 25%, 0.75); */
 }
 
 /***************/
