--- a/styles.css
+++ b/styles.css
@@ -311,7 +311,7 @@ input:checked + .billing-toggle__btn:before {
 }
 
 .button-trial,
-.button-trial:visited {
+.button-trial:active {
   color: hsl(225, 20%, 60%);
   background-color: hsl(227, 35%, 25%);
   padding: 0.75em 3em;
@@ -321,8 +321,7 @@ input:checked + .billing-toggle__btn:before {
   transition: padding 250ms;
 }
 
-.button-trial:hover,
-.button-trial:active {
+.button-trial:hover {
   padding: 1em 3.25em;
   box-shadow: 0px 2px 3px 3px rgb(50, 50, 50, 0.2);
 }
