--- a/styles.css
+++ b/styles.css
@@ -320,9 +320,11 @@ input:checked + .billing-toggle__btn:before {
   transition: padding 250ms;
 }
 
-.button-trial:hover {
-  padding: 1em 3.25em;
-  box-shadow: 0px 2px 3px 3px rgb(50, 50, 50, 0.2);
+@media screen and (hover: hover) {
+  .button-trial:hover {
+    padding: 1em 3.25em;
+    box-shadow: 0px 2px 3px 3px rgb(50, 50, 50, 0.2);
+  }
 }
 
 .button-trial:active {
