--- a/styles.css
+++ b/styles.css
@@ -320,20 +320,20 @@ input:checked + .billing-toggle__btn:before {
   transition: padding 250ms;
 }
 
-@media screen and (hover: hover) {
+@media not handheld and (hover: hover) {
   .button-trial:hover {
     padding: 1em 3.25em;
     box-shadow: 0px 2px 3px 3px rgb(50, 50, 50, 0.2);
   }
 }
-
+/* 
 .button-trial:active {
   color: hsl(225, 20%, 60%);
   background-color: hsl(227, 35%, 25%);
   padding: 0.75em 3em;
   border-radius: 50px;
   margin-top: 2em;
-}
+} */
 
 /***************/
 /* Media query */
