--- a/styles.css
+++ b/styles.css
@@ -328,12 +328,8 @@ input:checked + .billing-toggle__btn:before {
 }
 
 .button-trial:active {
-  color: hsl(225, 20%, 60%);
-  /* background-color: hsl(227, 35%, 25%); */
-  background-color: purple;
-  padding: 0.75em 3em;
-  border-radius: 50px;
-  margin-top: 2em;
+  padding: 1em 3.25em;
+  box-shadow: 0px 2px 3px 3px rgb(50, 50, 50, 0.2);
 }
 
 /***************/
