--- a/styles.css
+++ b/styles.css
@@ -226,13 +226,7 @@ h1,
   transition: width, height, box-shadow 250ms;
 }
 
-.slider::-webkit-slider-thumb:hover {
-  width: 38px;
-  height: 38px;
-  box-shadow: 0px 8px 15px 10px hsl(174, 86%, 45%, 0.2);
-}
-
-/* Firefox slider & slider hover */
+/* Firefox slider */
 .slider::-moz-range-thumb {
   border: none;
   width: 35px;
@@ -246,13 +240,7 @@ h1,
   transition: width, height, box-shadow 250ms;
 }
 
-.slider::-moz-range-thumb:hover {
-  width: 38px;
-  height: 38px;
-  box-shadow: 0px 8px 15px 10px hsl(174, 86%, 45%, 0.2);
-}
-
-/* Microsoft slider & slider hover */
+/* Microsoft slider */
 .slider::-ms-thumb {
   border: none;
   width: 35px;
@@ -320,13 +308,30 @@ input:checked + .billing-toggle__btn:before {
   transition: padding 250ms;
 }
 
+/* All hover states in a media query to separate hovers for mouse-enabled devices */
 @media screen and (hover: hover) and (pointer: fine) {
+  /* Firefox slider thumb hover state */
+  .slider::-moz-range-thumb:hover {
+    width: 38px;
+    height: 38px;
+    box-shadow: 0px 8px 15px 10px hsl(174, 86%, 45%, 0.2);
+  }
+
+  /* Chrome & Safari slider thumb hover state */
+  .slider::-webkit-slider-thumb:hover {
+    width: 38px;
+    height: 38px;
+    box-shadow: 0px 8px 15px 10px hsl(174, 86%, 45%, 0.2);
+  }
+
+  /* Submit button hover state */
   .button-trial:hover {
     padding: 1em 3.25em;
     box-shadow: 0px 2px 3px 3px rgb(50, 50, 50, 0.2);
   }
 }
 
+/* Submit button active/pressed/touched state styles for mobile */
 .button-trial:active {
   padding: 1em 3.25em;
   box-shadow: 0px 2px 3px 3px rgb(50, 50, 50, 0.2);
