--- a/styles.css
+++ b/styles.css
@@ -209,10 +209,9 @@ h1,
 
 /* The slider bar base styles */
 .slider {
-  /* overflow: visible; */
   appearance: none;
   width: 100%;
-  height: 40px;
+  height: 90px;
   border-radius: 150px;
   margin: 15px auto;
 }
@@ -250,7 +249,7 @@ h1,
    the component background. */
 .slider::-ms-track {
   width: 100%;
-  border: 15px solid transparent;
+  border: 30px solid transparent;
   border-radius: 50px;
   background-color: white;
   color: transparent; /* Removes tick marks in IE */
@@ -317,6 +316,12 @@ h1,
   transition: width, height, box-shadow 250ms;
 }
 
+.slider::-ms-thumb:hover {
+  width: 38px;
+  height: 38px;
+  box-shadow: 0px 8px 15px 10px hsla(174, 86%, 45%, 0.2);
+}
+
 /* This is the gray toggle bar */
 .billing-toggle {
   position: relative;
@@ -378,7 +383,7 @@ input:checked + .billing-toggle__btn::before {
 /***************/
 
 /* I put all hover states in a media query to separate hovers for mouse-enabled devices */
-@media screen and (hover: hover) and (pointer: fine) {
+@media screen and (pointer: fine) {
   /* Firefox slider thumb hover state */
   .slider::-moz-range-thumb:hover {
     width: 38px;
